--- a/templates/base.html
+++ b/templates/base.html
@@ -40,31 +40,20 @@
         <nav class="nav-extended">
             <div class="nav-wrapper">
               <ul>
-                <li id="logo-location"><a href="{{ url_for('get_tasks') }}" class="brand-logo left">I🐝M</a></li>
-                <li id="plus-location"><a href="{{ url_for('add_task') }}" ><i class="fas fa-plus"></i></a></li>
+                <li id="logo-location"><a href="{{ url_for('get_tasks') }}" class="brand-logo left" id="logo-color">I🐝M</a></li>
+                <li id="plus-location"><a href="{{ url_for('add_task') }}" ><i class="fas fa-plus" id="plus-color"></i></a></li>
                 <li id="search-location">
                   <form action="{{ url_for('search') }}" method="post"> 
                     <div class="input-field left" >
                       <input id="search" type="search" name="search" required>
-                      <label class="label-icon" for="search"><i class="fas fa-search"></i></label>
+                      <label class="label-icon" for="search"><i class="fas fa-search" id="search-color"></i></label>
                       <i class="material-icons">close</i>
                     </div>
                   </form>
                 </li>
             </ul>
 
-
-            <section>
-              <!-- flash messages -->
-              {% with messages = get_flashed_messages() %}
-                  {% if messages == toal_number %}
-                      {% for message in messages %}
-                              <li><a class="btn-flat">{{ message }}</a></li>
-                          </ul>
-                      {% endfor %}
-                  {% endif %}
-              {% endwith %}
-          </section>   
+           
 
             <section>
               <!-- flash messages -->
@@ -72,8 +61,7 @@
                   {% if messages %}
                       {% for message in messages %}
                           <ul class="flashes right">
-                              <!-- <h6 class="p-4">{{ message }}</h6> -->
-                              <li><a class="btn-flat">{{ message }}<span class="new badge red" data-badge-caption="!"></span></a></li>
+                              <li><a class="btn-flat"><span class="new badge red" data-badge-caption="{{ message }}"></span></a></li>
                           </ul>
                       {% endfor %}
                   {% endif %}
@@ -90,20 +78,6 @@
       </nav> 
     </header>
     
-
-<!-- flash messages 
-    <section>
-        {% with messages = get_flashed_messages() %}
-            {% if messages %}
-                {% for message in messages %}
-                    <div class="row flashes">
-                        <h6 class="green lighten-1 center-align p-4">{{ message }}</h6>
-                    </div>
-                {% endfor %}
-            {% endif %}
-        {% endwith %}
-    </section>
-  -->
 
     <main class="container">
       {% block content %}
