--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -1,40 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
- <!-- flash messages 
-<section>
-   
-    {% with messages = get_flashed_messages() %}
-        {% if messages %}
-            {% for message in messages %}
-                <div class="col flashes">
-                    <a class="btn-flat tooltipped" data-position="bottom"
-                    data-tooltip="Search and Alert">
-                    {{ message }}<span class="new badge"></span></a>
-                </div>
-            {% endfor %}
-        {% endif %}
-    {% endwith %}
-</section>    
--->
-<!-- 
-    <div class="row">
-        <form action="{{ url_for('search') }}" method="post" class="col s12">
-            <div class="row valign-wrapper center-align">
-                <div class="input-field col s12 m8">
-                    <i class="fas fa-search prefix"></i>
-                    <input type="text" name="query" id="query" required>
-                    <label for="query">Search Hive</label>
-                </div>
-                <div class="col s12 m4">
-                    <a href="{{ url_for('get_tasks') }}" class="btn grey text-darken waves-effect waves-red">Reset</a>
-                    <button type="submit" class="orange darken-1 btn waves-effect waves-yellow">
-                        <i class="fas fa-search left"></i> Search
-                    </button>
-                </div>
-            </div>
-        </form>
-    </div>
-    -->
+ 
     <div class="row">
         <div class="col s12 center">
             <br>
@@ -42,13 +8,6 @@
             <br>
         </div>
     </div>
-
-    <div class="progress-bar-container">
-        <div class="progress-bar">
-            <span class="percentage task-progress">
-            </span>
-        </div>
-      </div>
 
     <form action="/fill-db-button">
         <input type="submit" value="Fill DataBase" />
@@ -77,8 +36,7 @@
                         <label>
                             <input type="checkbox" name="mycheckbox" value="{{ task._id }}"
                             onclick="M.toast({html: '{{ task.task_name }}', classes: 'rounded'})"/>
-                            <span>        <a href="{{ url_for('delete_multiple') }}" onclick="M.toast({html: 'Reported! Good Job!', classes: 'rounded'})"
-                                class="btn-small">inside a form</a> </span>
+                            <span> </span>
                         </label>
                         </p>
                     </form>
