--- a/templates/welcome_task.html
+++ b/templates/welcome_task.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
-
 {% block content %}
 
-    <h3 class="light-blue-text text-dark-4 center-align">Message</h3>
+    <h3 class="light-blue-text text-dark-4 center-align">Welcome {{ username }}</h3>
 
     <div class="row card-panel grey lighten-5">
 
