--- a/templates/end.html
+++ b/templates/end.html
@@ -13,15 +13,12 @@
 
             <div class="row">
                 <div class="col s12">
-                    <p id="congrats-subtitle">You did everything you were told!</p>
+                    <p id="congrats-subtitle">Did you do everything you were told?<br>
+                        or<br>
+                        Did you edit the data to save the bees?
+                    </p>
                 </div>
             </div>       
-            
-            <div class="row">
-                <div class="col s12">
-                    <p id="congrats-subtitle">Scroll down to see your prize 🏆</p>
-                </div>
-            </div>   
 
             <div class="row">
                 <div class="col s12">
