--- a/templates/start.html
+++ b/templates/start.html
@@ -66,21 +66,21 @@
 
                     <div class="row">
                         <div class="input-field col s12">
-                            <input id="full_name" name="full_name" type="text" class="validate" placeholder="optional but unlocks extra feature!">
+                            <input id="full_name" name="full_name" type="text" class="validate" placeholder="optional but improves game experience">
                             <label for="full_name">Full Name</label>
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="input-field col s12">
-                            <input id="address" name="address" type="text" class="validate" placeholder="optional but unlocks extra feature!">
-                            <label for="address">Address</label>
+                            <input id="address" name="address" type="text" class="validate" placeholder="optional but improves game experience">
+                            <label for="address">Email</label>
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="input-field col s12">
-                            <input id="phone" name="phone" type="text" class="validate" placeholder="optional but unlocks extra feature!">
+                            <input id="phone" name="phone" type="text" class="validate" placeholder="optional but improves game experience">
                             <label for="phone">Telephone</label>
                         </div>
                     </div>
