--- a/templates/end.html
+++ b/templates/end.html
@@ -7,7 +7,7 @@
 
             <div class="row">
                 <div class="col s12">
-                    <h1 id="congrats">Congratulations!</h1>
+                    <h1 id="congrats">🍯Good Job!🍯</h1>
                 </div>
             </div>
 
@@ -97,9 +97,13 @@
             </div>
 
             <div class="row">
-                <div class="col s12">
-                    <a href="{{ url_for('logout') }}"><button>Delete all {{ username }} data?</button></a>
-                    <p>:)</p>
+                <div class="col s12" id="your-data">
+                    <p>Name: <em>{{ all_data.full_name }}</em></p>
+                    <p>Address: <em>{{ all_data.address }}</em></p>
+                    <p>Phone: <em>{{ all_data.phone }}</em></p>
+                    <br>
+                    <a href="{{ url_for('logout') }}" class="red waves-effect waves-light btn-large">
+                        <i class="fas fa-fire-alt"></i> Delete all '{{ username }}' data?</a>
                 </div>
             </div>
         </div>
