--- a/templates/logged_out.html
+++ b/templates/logged_out.html
@@ -1,10 +1,12 @@
 {% extends "base_bare.html" %}
 {% block content %}
     
-
-<div class="row center-custom">
-    <div class="col s12">
-        <a href="/start"><button>REPLAY?</button></a>
+<div class="fullpage">
+    <div class="row ">
+        <div class="col s12 center-custom section">
+            <a href="/start" class="red waves-effect waves-light btn-large">
+                <i class="fas fa-play"></i> REPLAY?</a>
+        </div>
     </div>
 </div>
 
