--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col s12 center">
             <br>
-            <p>To make this hive a more efficient honey producing machine, find and ALERT the system to all problem bees</p>
+            <p>To make this hive more efficient find and ALERT the system to all problem bees</p>
             <br>
         </div>
     </div>
@@ -37,14 +37,16 @@
                     <div class="col s11">
                         <a href="{{ url_for('edit_task', task_id=task._id) }}" class="right btn-small btn-flat"><i class="fas fa-edit" id="grey"></i></a>
                         
+                        <a href="{{ url_for('delete_task', task_id=task._id) }}"
+                        onclick="M.toast({html: 'Bee Reported', classes: 'rounded'})"
+                        class="btn-small red accent-4 waves-effect waves-white">Alert?</a>
+
                         <img src="/static/images/symbol2.png" width="10px">
                         <span class="title">{{ task.task_name }}<br>
                         {{ task.honey_production }}<br>
                         {{ task.health }}</p></span>
 
-                        <a href="{{ url_for('delete_task', task_id=task._id) }}"
-                        onclick="M.toast({html: 'Bee Reported', classes: 'rounded'})"
-                        class="btn-small red accent-4 waves-effect waves-white">Alert?</a>
+                        
                     </div>
                 </div>
             </li>
