--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -3,40 +3,39 @@
 {% block content %}
     <br>
     <br>
-        <form class="col s12" method="POST" action="{{ url_for('add_task') }}"> <!-- triggers python add_task -->
+    <div class="row card-panel grey lighten-5">
 
-          <div class="row">
-            <div class="input-field col s12">
-              <i class="fas fa-pencil-alt prefix light-blue-text text-darken-4"></i>
-              <input id="task_name" name="task_name" minlength="5" maxlength="50"
-              type="text" class="validate" required>
-              <label for="task_name">Bee Name</label>
-            </div>
+      <form class="col s12" method="POST" action="{{ url_for('add_task') }}"> <!-- triggers python add_task -->
+
+        <div class="row">
+          <div class="input-field col s12">
+            <img src="/static/images/symbol2.png" id="bee-name-symbol" class="prefix">
+            <input id="task_name" name="task_name" minlength="2" maxlength="50"
+            type="text" class="validate" required>
+            <label for="task_name">Bee Name</label>
           </div>
-            <div class="input-field col s12">
-              <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
-              <textarea id="honey_production" name="honey_production" minlength="4"
-                maxlength="50" class="materialize-textarea validate" required placeholder="Good or Poor"></textarea>
-              <label for="honey_production">Honey Productivity</label>
-            </div>
+        </div>
+          <div class="input-field col s12">
+            <textarea id="honey_production" name="honey_production" minlength="2"
+              maxlength="50" class="materialize-textarea validate" required></textarea>
+            <label for="honey_production">Honey Productivity</label>
+          </div>
 
-            <div class="input-field col s12">
-              <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
-              <textarea id="health" name="health" minlength="4"
-                maxlength="50" class="materialize-textarea validate" required placeholder="Healthy or Diseased"></textarea>
-              <label for="health">Health</label>
-            </div>
-          
+          <div class="input-field col s12">
+            <textarea id="health" name="health" minlength="2"
+              maxlength="50" class="materialize-textarea validate" required></textarea>
+            <label for="health">Health</label>
+          </div>
+        
+          <div class="row">
+              <div class="col s12 center-align">
+                  <button class="submit btn-large yellow" id="plus-color"> <!-- submit triggers python -->
+                      Add Bee <i class="fas fa-plus"></i>
+                  </button>
+              </div>
+          </div>
 
-            <div class="row">
-                <div class="col s12 center-align">
-                    <button class="submit btn-large light-blue darken-1 text-shadow"> <!-- submit triggers python -->
-                        Add Task <i class="fas fa-plus-square right"></i>
-                    </button>
-                </div>
-            </div>
-
-        </form>
-      </div>
+      </form>
+    </div>
 
 {% endblock %}
