--- a/templates/base.html
+++ b/templates/base.html
@@ -33,53 +33,54 @@
 <body>
     
 
-    <header>
-      <div class="navbar-fixed">
-        <nav class="nav-extended">
-            <div class="nav-wrapper">
-              <ul>
-                <li id="logo-location">
-                  <a href="{{ url_for('get_tasks') }}" class="brand-logo left tooltipped"
-                  data-position="bottom" data-tooltip="Database" id="logo-color">I🐝M</a></li>
+  <header>
+    <div class="navbar-fixed">
+      <nav class="nav-extended">
+          <div class="nav-wrapper">
+            <ul>
+              <li id="logo-location">
+                <a href="{{ url_for('get_tasks') }}" class="brand-logo left tooltipped"
+                data-position="bottom" data-tooltip="Database" id="logo-color">I🐝M</a></li>
 
-                <li id="plus-location">
-                  <a href="{{ url_for('add_task') }}" class="tooltipped" data-position="bottom"
-                  data-tooltip="Add Entry"><i class="fas fa-plus" id="plus-color"></i></a></li>
+              <li id="plus-location">
+                <a href="{{ url_for('add_task') }}" class="tooltipped" data-position="bottom"
+                data-tooltip="Add Entry"><i class="fas fa-plus" id="plus-color"></i></a></li>
 
-                <li id="search-location">
-                  <form action="{{ url_for('search') }}" method="post"> 
-                    <div class="input-field left">
-                      <input id="search" type="search" name="search" required>
-                      <label class="label-icon tooltipped" data-position="bottom" data-tooltip="Search" for="search"><i class="fas fa-search" id="search-color"></i></label>
-                      <i class="material-icons">close</i>
-                    </div>
-                  </form>
-                </li>
-            </ul>
+              <li id="search-location">
+                <form action="{{ url_for('search') }}" method="post"> 
+                  <div class="input-field left">
+                    <input id="search" type="search" name="search" required>
+                    <label class="label-icon tooltipped" data-position="bottom" data-tooltip="Search" for="search"><i class="fas fa-search" id="search-color"></i></label>
+                    <i class="material-icons">close</i>
+                  </div>
+                </form>
+              </li> 
+
+              <div id="flashes" >
+                <!-- flash messages -->
+                {% with messages = get_flashed_messages() %}
+                    {% if messages %}
+                        {% for message in messages %}
+                          {% if message != "Purge Complete!" %}
+                            <li class="right"><a class="btn-flat tooltipped" data-position="bottom" data-tooltip="Your task">
+                                  <span class="new badge red" data-badge-caption="{{ message }}"></span></a></span>
+                            {% else %}
+                              <li class="right"><a href="/end" class="btn-flat tooltipped" data-position="bottom" data-tooltip="CLICK HERE!">
+                                <span class="new badge red pulse" data-badge-caption="{{ message }} Hive efficiency 100%! CLICK HERE!"></span></a></span>
+                          {% endif %}
+                        {% endfor %}
+                    {% endif %}
+                {% endwith %}
+            </div>  
+
+
+          </ul>
 
            
 
-            <section>
-              <!-- flash messages -->
-              {% with messages = get_flashed_messages() %}
-                  {% if messages %}
-                      {% for message in messages %}
-                        {% if message != "Purge Complete!" %}
-                          <ul class="flashes right">
-                              <li><a class="btn-flat tooltipped" data-position="bottom" data-tooltip="Your task">
-                                <span class="new badge red" data-badge-caption="{{ message }}"></span></a></li>
-                          </ul>
-                          {% else %}
-                          <ul class="flashes right">
-                            <li><a href="/end" class="btn-flat tooltipped" data-position="bottom" data-tooltip="CLICK HERE!">
-                              <span class="new badge red pulse" data-badge-caption="{{ message }} Hive efficiency 100%! CLICK HERE!"></span></a></li>
-                        </ul>
-                        {% endif %}
-                      {% endfor %}
-                  {% endif %}
-              {% endwith %}
-          </section>    
         </div>
+
+        
 
         <div class="progress-bar-container">
           <div class="progress-bar">
@@ -89,7 +90,6 @@
 
       </nav> 
     </header>
-    
 
     <main class="container">
       {% block content %}
