--- a/templates/end.html
+++ b/templates/end.html
@@ -46,8 +46,10 @@
                 </div>
 
                 <div class="col s12 m6">
-                    <img src="/static/images/IBM-book.jpg" id="book">
-                    <div><a><button>READ MORE</button></a></div>
+                    <a href="https://en.wikipedia.org/wiki/IBM_and_the_Holocaust" target="_blank">
+                    <img src="/static/images/IBM-book.jpg" id="book"></a>
+                    <div><a href="https://en.wikipedia.org/wiki/IBM_and_the_Holocaust" target="_blank"
+                        class="black waves-effect waves-light btn-large">Read more</a></div>
                 </div>
             </div>
 
