--- a/templates/edit_task.html
+++ b/templates/edit_task.html
@@ -2,30 +2,27 @@
 
 {% block content %}
 
-    <h3 class="light-blue-text text-dark-4 center-align">Edit Task</h3>
+    <h3 class="center-align">Edit Data</h3>
 
     <div class="row card-panel grey lighten-5">
         <form class="col s12" method="POST" action="{{ url_for('edit_task', task_id=task._id) }}">
 
           <div class="row">
             <div class="input-field col s12">
-              <i class="fas fa-pencil-alt prefix light-blue-text text-darken-4"></i>
-              <input id="task_name" name="task_name" minlength="4" maxlength="50"
+              <input id="task_name" name="task_name" minlength="2" maxlength="50"
                 value="{{ task.task_name }}" type="text" class="validate" required>
               <label for="task_name">Name</label>
             </div>
           </div>
             <div class="input-field col s12">
-              <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
-              <textarea id="honey_production" name="honey_production" minlength="4"
+              <textarea id="honey_production" name="honey_production" minlength="2"
                 maxlength="50" class="materialize-textarea validate" required>
                 {{- task.honey_production -}}
               </textarea>
               <label for="task_description">Honey Productivity</label>
             </div>
             <div class="input-field col s12">
-              <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
-              <textarea id="health" name="health" minlength="4"
+              <textarea id="health" name="health" minlength="2"
                 maxlength="50" class="materialize-textarea validate" required>
                 {{- task.health -}}
               </textarea>
@@ -38,7 +35,7 @@
                     <a href="{{ url_for('get_tasks')}}" class="btn-large red text-shadow">
                       Cancel <i class="fas fa-times-circle right"></i>
                     </a>
-                    <button href="#modal1" class="modal-trigger btn-large light-blue darken-1 text-shadow">
+                    <button href="#modal1" class="modal-trigger btn-large yellow" id="general-color">
                         Confirm Edit <i class="fas fa-edit right"></i>
                     </button>
                 </div>
@@ -48,10 +45,10 @@
             <div id="modal1" class="modal">
               <div class="modal-content">
                   <h4 class="center">You sure?</h2>
-                  <p class="center"> Altering records or misleading authorities is a punishable offence</p>
+                  <p class="center"> Altering records or misleading authorities is a punishable offence!</p>
               <div class="modal-footer">
                   <a href="#!" class="modal-close waves-effect waves-green btn-flat left">Cancel</a>
-                  <button type="submit" class="btn light-blue darken-1 text-shadow">
+                  <button type="submit" class="btn yellow" id="general-color">
                       Confirm Edit <i class="fas fa-edit right"></i>
                   </button>
               </div>
