--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -4,11 +4,33 @@
     <div class="row">
         <div class="col s12 center">
             <br>
-            <p>To make this hive more efficient find and ALERT the system to all problem bees</p>
             <br>
+            <p class="center">
+                <i class="fas fa-exclamation"></i>
+                 The system has detected inefficient bees. See red box above. Search and ALERT
+                <i class="fas fa-exclamation"></i>
+            </p>
+            <!-- 
+            <div id="flashes center" >
+                {% with messages = get_flashed_messages() %}
+                    {% if messages %}
+                        {% for message in messages %}
+                          {% if message != "Purge Complete!" %}
+                            <span class="center"><a class="btn-flat tooltipped" data-position="bottom" data-tooltip="Your task">
+                                  <span class="new badge red" data-badge-caption="{{ message }}"></span></a></span>
+                            {% else %}
+                              <span class="center"><a href="/end" class="btn-flat tooltipped" data-position="bottom" data-tooltip="CLICK HERE!">
+                                <span class="new badge red pulse" data-badge-caption="{{ message }} Hive efficiency 100%! CLICK HERE!"></span></a></span>
+                          {% endif %}
+                        {% endfor %}
+                    {% endif %}
+                {% endwith %}
+            </div>   
+            -->
         </div>
     </div>
 
+<!-- 
     <form action="/fill-db-button">
         <input type="submit" value="Fill DataBase" />
     </form>
@@ -16,6 +38,7 @@
     <form action="/delete-all">
         <input type="submit" value="Delete All" />
     </form>
+-->
 
     {% if tasks|length > 0 %}
     <form action="/delete_multiple" method="post">
