--- a/templates/welcome_task.html
+++ b/templates/welcome_task.html
@@ -2,8 +2,7 @@
 {% block content %}
 
     <h3 class="center-align">Welcome {{ username }}</h3>
-    <p class="center-align">The database is almost complete, just add this last entry!</p>
-
+    <p class="center-align" id="general-font-size">The database is almost complete, just add this last entry!</p>
     <div class="row card-panel grey lighten-5">
 
         <div class="col m6">
