--- a/templates/start.html
+++ b/templates/start.html
@@ -3,15 +3,15 @@
 
     <div id="fullpage">
 
-        <!-- <div class="section center">
+        <div class="section center">
             <div class="center-custom">
                 <h1 id="game-title">I🐝M</h1><br>
                 <p id="game-subtitle">A short admin game about efficient honey production</p>
                 <a href="#2"><i class="fas fa-chevron-down" id="arrow" aria-hidden="true"></i></a>
             </div>
-        </div> -->
+        </div> 
 
-        <div class="section ">
+        <!-- <div class="section">
             <div class="row">
                 <div class="col s12 center-custom">
                     <h1 id="game-title">I🐝M</h1><br>
@@ -26,7 +26,7 @@
                 <div class="col s12 center-custom">
                     <a href="#2"><i class="fas fa-chevron-down" id="arrow" aria-hidden="true"></i></a>
                 </div>
-            </div>
+            </div> -->
                 
         </div>
         
