--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
                             <li class="right"><a class="tooltipped red pulse btn z-depth-0"
                               data-position="bottom" data-tooltip="Your task">{{ message }}</a></li>
                             {% else %}
-                              <li class="right"><a href="/end" class="tooltipped red pulse btn z-depth-0">
+                              <li class="right"><a href="/end" class="red pulse btn z-depth-0">
                                 {{ message }} Hive efficiency 100%! CLICK HERE!</a></span>
                           {% endif %}
                         {% endfor %}
