--- a/static/css/style.css
+++ b/static/css/style.css
@@ -187,14 +187,14 @@ a {
 
 #game-title {
   font-size: 10rem;
-  position: absolute;
-  top: 225px;
+  position: relative;
+  top: 10%;
 }
 
 #game-subtitle {
   font-size: 1rem;
   position: absolute;
-  bottom: 275px;
+  bottom: 100px;
 }
 
 #arrow {
@@ -258,7 +258,7 @@ https://codepen.io/seolan/pen/jbGyxq*/
 
 #book {
   width: 300px; 
-  margin: 50px;
+  margin: 40px;
 }
 
 #end2 {
