--- a/templates/start.html
+++ b/templates/start.html
@@ -2,7 +2,7 @@
 {% block content %}
 
     <div id="fullpage">
-
+<!-- 
         <div class="section center">
             <div class="center-custom">
                 <h1 id="game-title">I🐝M</h1><br>
@@ -10,10 +10,11 @@
                 <a href="#2"><i class="fas fa-chevron-down" id="arrow" aria-hidden="true"></i></a>
             </div>
         </div> 
-
-        <!-- <div class="section">
+-->
+        
+        <div class="section">
             <div class="row">
-                <div class="col s12 center-custom">
+                <div class="col s12 ">
                     <h1 id="game-title">I🐝M</h1><br>
                 </div>
             </div>
@@ -26,8 +27,7 @@
                 <div class="col s12 center-custom">
                     <a href="#2"><i class="fas fa-chevron-down" id="arrow" aria-hidden="true"></i></a>
                 </div>
-            </div> -->
-                
+            </div>     
         </div>
         
         <div class="section center" id="2">
